# discordlist-rs

./: .gitignore  Cargo.toml  README.md
examples/: update_guilds.rs
src/: bitflags.rs  lib.rs  search.rs
