[package]
name = "discordlist"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/doinkythederp/discordlist-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
undocumented = []

[dependencies]
const_format = "0.2.31"
reqwest = { version = "0.11.20", features = ["json"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
snafu = "0.7.5"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
